# org

./: .gitignore  .npmrc  cargo.toml  package.json  pnpm-lock.yaml
apps/relay/: Cargo.toml  package.json
apps/relay/src/: client_socket.rs  color.rs  game_socket.rs  hex.rs  main.rs  org.rs  org_client.rs  scene.rs  util.rs
apps/relay/src/data/: color.rs  hex.rs  mod.rs
apps/sim/: Cargo.toml  package.json
apps/sim/demo/: dem.json  game.json  jump.json
apps/sim/src/: main.rs
apps/web/: README.md  docker-compose.yml  next.config.js  package.json  start-database.sh
apps/web/prisma/: schema.prisma
apps/web/prisma/migrations/20240407154252_nextauth/: migration.sql
apps/web/prisma/migrations/20240415180127_org_essentials/: migration.sql
apps/web/src/: env.js
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/(components)/: dynamic-island.tsx  nav.tsx
apps/web/src/app/me/: page.tsx
apps/web/src/app/me/orgs/: layout.tsx  page.tsx
apps/web/src/app/me/orgs/new/: page.tsx
apps/web/src/app/org/[orgId]/: page.tsx
apps/web/src/app/scene/: page.tsx
apps/web/src/components/ui/: dropdown-menu.tsx  noise.tsx  pfp.tsx  theme-toggle.tsx
apps/web/src/lib/: utils.ts
apps/web/src/server/api/: root.ts  trpc.ts
apps/web/src/server/api/routers/: me.ts  org.ts  scene.ts
apps/web/src/styles/: globals.css
