[package]
name = "relay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
axum = {version ="0.7.5", features = ["ws"]}
futures-util = "0.3.30"
tokio = { version="1.36.0",  features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = "0.21.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
