[package]
name = "relay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
axum = {version ="0.7.5", features = ["ws"]}
futures-util = "0.3.30"
nom = "7.1.3"
rand = "0.8.5"
serde = {version= "1.0.197", features = ["derive"]}
serde_json = "1.0.115"
tokio = { version="1.36.0",  features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = "0.21.0"
tracing = "0.1.40"
tracing-opentelemetry = "0.23.0"
tracing-subscriber = "0.3.18"
